--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
     padding: 80px 20px; /* Increased padding for more space */
     text-align: center; /* Center align text */
     color: #333; /* Dark text for contrast */
+    padding-left: 0%;
 }
 
 .home-content {
@@ -127,7 +128,7 @@ body {
     padding: 20px; /* Padding around text */
     border-radius: 10px; /* Rounded corners */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow */
-    max-width: 800px; /* Maximum width for the box */
+    max-width: 1100px; /* Maximum width for the box */
     margin: 20px auto; /* Center the box horizontally */
     font-family: 'Arial', sans-serif; /* Change font family as desired */
 }
@@ -172,7 +173,7 @@ body {
 
 /* Profile Info Styles */
 .profile-info {
-    margin-top: 25px; /* Space above profile info */
+    margin-top: 15px; /* Space above profile info */
     font-size: 1rem; /* Font size for profile info */
 }
 
